--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     <version>1.0-SNAPSHOT</version>
     <dependencies>
         <dependency>
-            <groupId>com.learning.jenkins</groupId>
+            <groupId>com.jenkins.maven</groupId>
             <artifactId>test-maven-dependency</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
