--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,9 +1,20 @@
 pipeline {
-
+    parameters{booleanParam(name: 'isTest, defaultValue: false, description: 'set this if you wanted to run test stage')}
     agent {label 'master'}
 
     stages{
 
+          stage('testingDirectory')
+        {
+            steps{
+                dir($WORKSPACE/src)
+                {
+                sh " pwd "
+
+                }
+            }
+        }
+        
          stage('cleanup')
         {
             steps{
@@ -27,10 +38,21 @@ pipeline {
           stage('install')
         {
             steps{
+                dir($WORKSPACE)
+                {
                 sh " mvn install "
+
+                }
             }
         }
 
+          stage('test')
+        {
+            when { expression{ return ($params.isTest)}
+            steps{
+                sh " mvn test"
+            }
+        }
     }
 
 }
