--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -38,7 +38,7 @@ pipeline {
           stage('install')
         {
             steps{
-                dir($WORKSPACE)
+                dir('$WORKSPACE')
                 {
                 sh " mvn install "
 
