--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -7,7 +7,7 @@ pipeline {
           stage('testingDirectory')
         {
             steps{
-                dir('src')
+                dir("${WORKSPACE}/src")
                 {
                 sh " pwd "
 		sh "env" 
